--- a/Mobile App/Mobile App/Views/AboutPage .xaml
+++ b/Mobile App/Mobile App/Views/AboutPage .xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Mobile_App.Views.AboutPage"
-             Title="About">
+             Title="About"
+             BackgroundColor="#121212">
     <!-- Layout children in two rows -->
     <Grid RowDefinitions="Auto,*">
         <Image Source="xamarin_logo.png"
